--- a/writeup.tex
+++ b/writeup.tex
@@ -77,24 +77,42 @@
 \maketitle
 
 \section{Task Solution}
+The approach to this task consisted of the extraction of relevant features from
+the audio, the estimation of stable sections from these features, the
+refinement of segment boundaries and finally, the synthesis of the output audio
+based on the best segment found.
+
 \subsection{Feature extraction}
-Used RMS, F0 and spectral flux, see figure~\ref{} for illustration of loop
-selection based on these features.
-Spectral flux used for salience of spectral content was calculated as:
-$$ Insert math here...$$.
-RMS used as a simple loudness measurement and was calculated as:
-$$ Insert maths here $$.
+Three features were chosen to provide as measure for the overall stability of
+the audio at any time in the audio. These features are fundamental frequency
+($f_0$), Root Mean Square and Spectral Flux.\\
+Spectral flux, used for measuring salience of spectral content, was calculated as:
+$$
+\text{SF}(n) =
+\frac{\sqrt{\sum_{K/2-1}^{k=0}(|X(k,n)|-|X(k,n-1)|)^2}}{K/2}
+$$
+where $X$ represents the DFT of the audio, $K$ is the current DFT bin index, $K$ is
+the total number of bins and $n$ is the current sample
+index~\parencite{Lerch2012}.\\
+RMS was chosen as a simple measure for loudness and was calculated as:
+$$RMS(n) = \sqrt{\frac{1}{N}\sum_{i=i_s(n)}^{i_e(n)}{x(i)^2}}$$
+where $i$ represents indexes in the current frame of audio and N is the total
+number of indexes in the current frame~\parencite{Lerch2012}..
+
 An implementation of the YIN algorithm was adapted for fundamental frequency
-estimation. Parabolic interpolation was also added for increased accuracy.
-It was noticed that as the system would only be analysing audio of specific,
-relatively static pitches, it was not necessary to differentiate between
-different octaves. For this reason, the F0 was wrapped and centred using the
-chroma spectrum. This allowed for the negation of octave errors commonly seen
-in auto-correlation based F0 estimation algorithms:
+estimation~\parencite[p352-353]{Zolzer2011}. This implementation was further
+modified to use parabolic interpolation for increased accuracy.
+It was also noticed that as the system would only be analysing audio of
+specific, relatively static pitches, it was not necessary to differentiate
+between different octaves. For this reason, the $f_0$ was wrapped and centred
+using the chroma spectrum. This allowed for the negation of octave errors
+commonly seen in auto-correlation based $f_0$ estimation algorithms:
 $$ Insert math here...$$
 This significantly improved the measurement of pitch spread as discussed in
 the following section.
 
+see figure~\ref{} for illustration of loop
+selection based on these features.
 \subsection{Feature analysis/loop selection}
 A moving standard deviation was then taken for each of the three features,
 creating 3 vectors to measure the spread of these features over time.
@@ -152,5 +170,7 @@ of thresholds for audio segmentation.
 handeling of vibrato
 
 \section{Figures}
+
+\printbibliography
 
 \end{document}
