--- a/writeup.tex
+++ b/writeup.tex
@@ -97,7 +97,7 @@ index~\parencite{Lerch2012}.\\
 RMS was chosen as a simple measure for loudness and was calculated as:
 $$RMS(n) = \sqrt{\frac{1}{N}\sum_{i=i_s(n)}^{i_e(n)}{x(i)^2}}$$
 where $i$ represents indexes in the current frame of audio and N is the total
-number of indexes in the current frame~\parencite{Lerch2012}..
+number of indexes in the current frame~\parencite{Lerch2012}.
 
 An implementation of the YIN algorithm was adapted for fundamental frequency
 estimation~\parencite[p352-353]{Zolzer2011}. This implementation was further
@@ -105,24 +105,32 @@ modified to use parabolic interpolation for increased accuracy.
 It was also noticed that as the system would only be analysing audio of
 specific, relatively static pitches, it was not necessary to differentiate
 between different octaves. For this reason, the $f_0$ was wrapped and centred
-using the chroma spectrum. This allowed for the negation of octave errors
-commonly seen in auto-correlation based $f_0$ estimation algorithms:
-$$ Insert math here...$$
-This significantly improved the measurement of pitch spread as discussed in
+using the chroma spectrum~\parencite[p.4]{Peeters2006} This allowed for the negation of octave errors
+commonly seen in auto-correlation based $f_0$ estimation algorithms. This was
+achieved by first mapping estimated frequencies to the semi-tone pitch
+spectrum:
+$$n(f_k) = 12\log_2\Big(\frac{f_k}{440}\Big)+69$$
+Pitches were then wrapped around a single octave and centred on the spectrum by
+subtracting the median and adding half an octave:
+$$c(n) = \bmod((n-\mu)+6, 12)$$
+where $f_k$ is the current frequency estimate, $n$ is the current estimate
+mapped to the semi-tone pitch spectrum and $\mu$ is the median of all $n$.
+This significantly improved the measurement of pitch spread  as discussed in
 the following section.
 
 see figure~\ref{} for illustration of loop
 selection based on these features.
 \subsection{Feature analysis/loop selection}
-A moving standard deviation was then taken for each of the three features,
-creating 3 vectors to measure the spread of these features over time.
-An iteratively increasing threshold was applied to the standard deviation
-measurements, searching for segments of consecutive frames to be used for
-looping. A frame was considered viable if it's length was greater than it's
+Having extracted relevant features, analysis is then performed to determine
+the stability of the audio.  A moving standard deviation is taken for each of
+the three features, creating 3 vectors to measure the spread of these features
+over time.  An iteratively increasing threshold is applied to the standard
+deviation measurements, searching for segments of consecutive frames to be used
+for looping. A frame is considered viable if it's length was greater than it's
 mean fundamental period multiplied by the minimum number of periods set as a
-parameter. 
+parameter.\\
 Upon finding a suitable frame, positive zero crossings are searched for around
-it's starting index and the closest multiple to the mean f0 period at the end
+it's starting index and the closest multiple to the mean $f_0$ period at the end
 point. These values form the final start and end indexes for the loop.
 
 \subsection{Synthesis}
