--- a/writeup.tex
+++ b/writeup.tex
@@ -166,7 +166,7 @@ increased the chance of discontinuities due to sudden changes at loop points.
 Careful splicing of samples at zero crossings ensured smooth transitions at
 loop points.  However, long samples will evolve over time, thus inherently not
 looping well due to the lack of continuity between the segment's start and
-finish.  A reasonable value of 25 periods was found to provide a good trade off
+finish. Reasonable values of 14-25 periods were found to provide a good trade off
 between these two characteristics.\\
 A range of audio files were tested using the system. Each was stretched by a
 duration of 1.5 time it's original duration. This was the only duration tested
